fix(kork-atlas): harden Ec2CommonTags against null Frigga fields, SDK throws, and interrupts
Findings from /simplify high-effort review:

1. friggaTagsFromAsgName previously called tags.put("application"|"cluster"|"server.group", value)
   unconditionally. When Names.parseName fails to match NAME_PATTERN (e.g. a hand-named
   legacy ASG, or any input outside Frigga's char class), every field returns null. The
   null values then propagated to Tag.of(key, null) in derive(), which throws NPE — failing
   moderneCommonTags bean construction and crashing Spring context startup for every
   consumer service. Now skips null/blank values for all five Frigga-derived keys
   consistently; ec2Tags's putIfAbsent fallback covers the missing-application case.

2. derive() now wraps the EC2 path in try/catch. EC2MetadataUtils throws SdkClientException
   under AWS_EC2_METADATA_DISABLED=true (and similar hardened environments) even after our
   imdsReachable() probe succeeds, because the probe uses raw HttpClient and doesn't go
   through SdkSystemSetting. Defensively falling back to dev tags keeps Spring startup safe.

3. imdsReachable()'s broad catch (Exception) silently cleared the interrupt flag.
   Added explicit catch (InterruptedException) that restores it before returning.

4. log.warn at the DescribeTags catch now passes the exception object so stack traces
   reach Atlas / log search instead of just the message string.

5. Dropped Collectors.toList() in favor of Stream.toList() (Java 16+).

New test friggaTagsFromAsgName_omitsNullKeysEntirelyWhenFriggaCannotParse locks down the
null-Frigga behavior so future regressions surface in CI rather than in production.

Findings skipped per /simplify guidelines (design-level changes, behavior preservation, or
explicitly accepted in the spec):
- moderneCommonTags MeterFilter applies to all registries: intentional per spec.
- @PropertySource precedence vs EnvironmentPostProcessor: design decision in spec.
- Drop Ec2Client for IMDS-